--- a/app/src/main/res/layout/fragment_addsubmission.xml
+++ b/app/src/main/res/layout/fragment_addsubmission.xml
@@ -16,6 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/ic_shape"
+        android:layout_marginTop="@dimen/small"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -102,7 +103,7 @@
         android:id="@+id/textView3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/medium"
+        android:layout_marginTop="@dimen/small"
         android:text="@string/type_addsubmission"
         android:textColor="@color/white"
         android:textSize="@dimen/textH2"
@@ -115,6 +116,7 @@
         android:id="@+id/sp_types_submissions"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        tools:layout_height="60dp"
         android:background="@drawable/submission_text_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -124,7 +126,7 @@
         android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="@dimen/small"
         android:text="@string/description_addsubmission"
         android:textColor="@color/white"
         android:textSize="@dimen/textH2"
@@ -138,7 +140,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:hintEnabled="false"
-        android:layout_marginBottom="@dimen/large"
+        android:layout_marginBottom="@dimen/medium"
         app:layout_constraintVertical_bias="0"
         app:layout_constraintBottom_toTopOf="@+id/btnSubmission"
         app:layout_constraintTop_toBottomOf="@+id/textView2">
